Bug 177135 - Chat window font setup ignored by chat history
Summary: Chat window font setup ignored by chat history
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-07 13:24 UTC by Petr Kopecký
Modified: 2008-12-25 17:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Petr Kopecký 2008-12-07 13:24:14 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

When Chat window -> Colors and fonts -> Use custom font is selected it is ignored by chat windows. 

Steps to reproduce:
1) Open chat window and look at font in chat history
2) Open Settings -> Chat window -> Colors and fonts -> Use custom font and select some different font and apply settings 
3) Font changes in opened chat window
4) Close chat window and open it again -> there is original font, not the one selected in settings

Expected behaviour:
Chat window -> Colors and fonts -> Use custom font shoud set some default font to all chat windows (it works this way in Kopete 0.12 in KDE 3.5)
Comment 1 Roman Jarosz 2008-12-25 17:14:01 UTC
SVN commit 901478 by rjarosz:

Fix bug 177135: Chat window font setup ignored by chat history.

BUG: 177135



 M  +3 -3      chatmessagepart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=901478