Fix bug 177135: Chat window font setup ignored by chat history.

BUG: 177135


svn path=/trunk/KDE/kdenetwork/kopete/; revision=901478